--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,26 +14,11 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
   color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
 
 .border-primary {
 	@apply border-neutral-400;
@@ -48,5 +33,5 @@ a {
 }
 
 .table-cell {
-  @apply pl-2 py-2 text-slate-200 text-center bg-slate-800 hover:bg-slate-600 transition-all;
+  @apply pl-2 py-2 px-4 bg-slate-800 hover:bg-slate-600 transition-all;
 }
