--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  @apply bg-slate-900
 }
 
 a {
@@ -33,7 +34,7 @@ a {
 }
 
 .table-cell {
-  @apply pl-2 py-2 px-4 bg-slate-800 hover:bg-slate-600 transition-all;
+  @apply pl-2 py-2 px-4 hover:bg-slate-600 transition-all;
 }
 
 .border-primary {
@@ -48,6 +49,38 @@ a {
 	@apply text-neutral-300 hover:text-neutral-100 transition-all;
 }
 
-.table-cell {
-  @apply pl-2 py-2 text-slate-200 text-center bg-slate-800 hover:bg-slate-600 transition-all;
+.lds-ring {
+    display: inline-block;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+.lds-ring div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border: 8px solid #fff;
+    border-radius: 50%;
+    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: #fff transparent transparent transparent;
+}
+.lds-ring div:nth-child(1) {
+    animation-delay: -0.45s;
+}
+.lds-ring div:nth-child(2) {
+    animation-delay: -0.3s;
+}
+.lds-ring div:nth-child(3) {
+    animation-delay: -0.15s;
+}
+@keyframes lds-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
